--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -6,7 +6,6 @@ on:
   push:
     branches: [ main ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build_push_image:
     runs-on: ubuntu-20.04
@@ -14,6 +13,20 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Docker Login
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ secrets.ACR_NAME }}
+          username: ${{ secrets.ACR_LOGIN }}
+          password: ${{ secrets.ACR_PASSWORD }}
+
+      - name: Build and push staging images
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          tags: ${{secrets.ACR_NAME}}/contoso-website:latest
+          push: true
+          
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
