--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Set up Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Docker Login
         uses: docker/login-action@v1
         with:
@@ -24,8 +27,9 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          tags: ${{secrets.ACR_NAME}}/contoso-website:latest
           push: true
+          tags: ${{secrets.ACR_NAME}}/contoso-website:latest
+          
           
       # Runs a single command using the runners shell
       - name: Run a one-line script
