--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Build and push the latest build to staging
 
 on:
@@ -13,30 +11,35 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Docker Login
-        uses: docker/login-action@v1
+      - name: Build and push staging image
+        uses: docker/build-push-action@v1.1.1
         with:
-          registry: ${{ secrets.ACR_NAME }}
           username: ${{ secrets.ACR_LOGIN }}
           password: ${{ secrets.ACR_PASSWORD }}
+          registry: ${{ secrets.ACR_NAME }}
+          repository: contoso-website
+          tags: latest
 
-      - name: Build and push staging images
-        uses: docker/build-push-action@v2
+  deploy:
+    runs-on: ubuntu-20.04
+    needs: build_push_image
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install Helm
+        uses: Azure/setup-helm@v1
         with:
-          context: .
-          push: true
-          tags: ${{secrets.ACR_NAME}}/contoso-website:latest
-          
-          
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+          version: v3.3.1
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Get AKS Credentials
+        uses: Azure/aks-set-context@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          # Resource Group Name
+          resource-group: {resource-group}
+          # AKS Cluster Name
+          cluster-name: contoso-video
+
+      - name: Run Helm Deploy
+        run:
